# finley

./: .editorconfig  .gitignore  .justfile  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
src/: main.rs
tests/: morse-lib.rs
