[package]
name = "finley"
version = "0.1.0"
authors = ["Jorge Brunal Pérez <diniremix@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Finley, a terminal utility for encoding and decoding text files using morse code"
readme = "README.md"
homepage = "https://diniremix.web.app"
repository = "https://github.com/diniremix/finley"
keywords = ["finley", "terminal", "encoding", "morse"]
categories = ["command-line-utilities", "encoding", "text-processing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# morse = { path = "../morse", features=["spanish"]}
morse = { git = "https://github.com/diniremix/morse", features=["spanish"]}

[profile.release]
lto = true
opt-level = 2
strip = true
debug = false
panic = "abort"
